--- a/index.html
+++ b/index.html
@@ -5,37 +5,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
   <title>New Year New Me</title>
-  <link rel="stylesheet" href="styles/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-  <!-- banner -->
-  <div class="img-container">
-    <div class="inner-container">
-      <h1> <strong> Lorem ipsum dolor sit amet.</strong></h1>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
-        Odio adipisci quos consequuntur vitae fuga quo!</h4>
+<!-- banner section -->
+
+  <div class="container">
+    <img src="/images/banner/banner3.png" alt="Snow" style="width:100%;">
+    <div class="big-texts">
+      <h1 class="big-text-title">All Thinks Are Possible<br>If You believe</h1>
+      <p class="lorem01">There are many variations of passages of Lorem Ipsum available,
+        but the<br>majority have suffered alteration in some form, by injected humour,<br>
+        or randomised words</p>
+      <button class="btn-primary">Contact Us</button>
     </div>
   </div>
 
-  <!-- my failures -->
-  <section>
-    <div class="failures">
-      <div class="women"> <img src="/images/person.png" alt="" height="50%"></div>
-      <div class="points">
-        <h1>My failures of previous year</h1>
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, iure.</h3>
-      </div>
-    </div>
 
-    <!-- my plans -->
-  </section>
-
-  <section>
-
-  </section>
+  
 </body>
 
 </html>
