--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-<!-- banner section -->
+  <!-- banner section -->
 
   <div class="container">
-    <img src="/images/banner/banner3.png" alt="Snow" style="width:100%;">
+    <img src="/images/banner/banner3.png" alt="banner" style="width:100%;">
     <div class="big-texts">
       <h1 class="big-text-title">All Thinks Are Possible<br>If You believe</h1>
       <p class="lorem01">There are many variations of passages of Lorem Ipsum available,
@@ -28,7 +28,52 @@
   </div>
 
 
-  
+  <!-- my failures -->
+
+  <div class="failures">
+    <img src="/images/person.png" alt="lady" style="width:35%;">
+    <div class="fail-texts"></div>
+    <div class="fail-texts">
+      <h1 class="failures-title">My failures of previous year</h1>
+      <p>Contrary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece ofclassical
+        Latin literature from 45 BC,<br>making it over 2000 years old. Richard McClintock.</p>
+      <div class="fail-list">
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Quaerat suscipit eaque molestiae assumenda!</li>
+        <li>Tempore, et? Suscipit, deleniti et.</li>
+        <li>Cupiditate praesentium porro ab quae!</li>
+        <li>Dolore similique eum deleniti perferendis!</li>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- my skills -->
+  <h1 class="skill-title">My Skills</h1>
+  <div class="skills">
+    <div class="skill-items"><img src="/images/icons/web.png" alt="web">
+      <h3>Web Development</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+
+    <div class="skill-items"><img src="/images/icons/js.png" alt="js">
+      <h3>Java-Script</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+
+    <div class="skill-items"><img src="/images/icons/smoke.png" alt="smoke">
+      <h3>Quit Smoking</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+
+    <div class="skill-items"><img src="/images/icons/ecom.png" alt="ecom">
+      <h3>E-commerce</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+  </div>
+
+
+
 </body>
 
 </html>
