--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
   <!-- banner section -->
 
   <div class="container">
@@ -49,6 +50,7 @@
 
 
   <!-- my skills -->
+
   <h1 class="skill-title">My Skills</h1>
   <div class="skills">
     <div class="skill-items"><img src="/images/icons/web.png" alt="web">
@@ -73,6 +75,12 @@
   </div>
 
 
+  <!-- call now -->
+
+  <div id='bg_2'>
+    <h1 class="always-keep">Awlays keep a<br>positive mindset</h1>
+    <button class="btn-primary-2">Contact Us</button>
+  </div>
 
 </body>
 
