--- a/index.html
+++ b/index.html
@@ -79,8 +79,39 @@
 
   <div id='bg_2'>
     <h1 class="always-keep">Awlays keep a<br>positive mindset</h1>
-    <button class="btn-primary-2">Contact Us</button>
+    <button class="btn-primary-2">Subscribe</button>
   </div>
+
+
+  <!-- footer -->
+  <div class="footer-bg">
+    <div class="footer">
+      <div class="footer-title">
+        <h1>Future</h1>
+        <br>
+        <p>There are many variations of passages<br>of Lorem Ipsum available, but the<br>majority have suffered
+          alteration in<br>some form, by injected humour,<br>or randomised words</p><br>
+        <p>email: abc@gmail.com</p>
+        <br>
+        <p>Phone: +880 19478 5990</p>
+
+        <div class="icons">
+          <li><img src="/images/icons/fb.png" alt="""></li>
+          <li><img src=" /images/icons/twitter.png" alt=""></li>
+          <li><img src="/images/icons/youtube.png" alt=""></li>
+        </div>
+      </div>
+
+      <div class="footer-sub">
+        <h3 class="sub">Subscribe</h3>
+        <input type="email" placeholder="   Your Email" class="email">
+        <br>
+        <button class="btn-primary-3">Subscribe</button>
+      </div>
+    </div>
+  </div>
+
+
 
 </body>
 
