--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/styles.css">
+  <script src="https://kit.fontawesome.com/002bea8e97.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -39,11 +40,11 @@
       <p>Contrary to popular belief, Lorem Ipsum<br>is not simply random text. It has roots<br>in a piece ofclassical
         Latin literature from 45 BC,<br>making it over 2000 years old. Richard McClintock.</p>
       <div class="fail-list">
-        <li>Lorem ipsum dolor sit amet.</li>
-        <li>Quaerat suscipit eaque molestiae assumenda!</li>
-        <li>Tempore, et? Suscipit, deleniti et.</li>
-        <li>Cupiditate praesentium porro ab quae!</li>
-        <li>Dolore similique eum deleniti perferendis!</li>
+        <li><i class="fa-solid fa-check"></i> Lorem ipsum dolor sit amet.</li>
+        <li><i class="fa-solid fa-check"></i> Quaerat suscipit eaque molestiae assumenda!</li>
+        <li><i class="fa-solid fa-check"></i> Tempore, et? Suscipit, deleniti et.</li>
+        <li><i class="fa-solid fa-check"></i> Cupiditate praesentium porro ab quae!</li>
+        <li><i class="fa-solid fa-check"></i> Dolore similique eum deleniti perferendis!</li>
       </div>
     </div>
   </div>
