--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- banner section -->
 
   <div class="container">
-    <img src="/images/banner/banner3.png" alt="banner" style="width:100%;">
+    <img src="images/banner/banner3.png" alt="banner" style="width:100%;">
     <div class="big-texts">
       <h1 class="big-text-title">All Thinks Are Possible<br>If You believe</h1>
       <p class="lorem01">There are many variations of passages of Lorem Ipsum available,
@@ -33,7 +33,7 @@
   <!-- my failures -->
 
   <div class="failures">
-    <img src="/images/person.png" alt="lady" style="width:35%;">
+    <img src="images/person.png" alt="lady" style="width:35%;">
     <div class="fail-texts"></div>
     <div class="fail-texts">
       <h1 class="failures-title">My failures of previous year</h1>
@@ -54,22 +54,22 @@
 
   <h1 class="skill-title">My Skills</h1>
   <div class="skills">
-    <div class="skill-items"><img src="/images/icons/web.png" alt="web">
+    <div class="skill-items"><img src="images/icons/web.png" alt="web">
       <h3>Web Development</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="skill-items"><img src="/images/icons/js.png" alt="js">
+    <div class="skill-items"><img src="images/icons/js.png" alt="js">
       <h3>Java-Script</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="skill-items"><img src="/images/icons/smoke.png" alt="smoke">
+    <div class="skill-items"><img src="images/icons/smoke.png" alt="smoke">
       <h3>Quit Smoking</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
 
-    <div class="skill-items"><img src="/images/icons/ecom.png" alt="ecom">
+    <div class="skill-items"><img src="images/icons/ecom.png" alt="ecom">
       <h3>E-commerce</h3>
       <p>Lorem ipsum dolor sit amet.</p>
     </div>
@@ -97,9 +97,9 @@
         <p>Phone: +880 19478 5990</p>
 
         <div class="icons">
-          <li><img src="/images/icons/fb.png" alt="""></li>
-          <li><img src=" /images/icons/twitter.png" alt=""></li>
-          <li><img src="/images/icons/youtube.png" alt=""></li>
+          <li><img src="images/icons/fb.png" alt="""></li>
+          <li><img src="images/icons/twitter.png" alt=""></li>
+          <li><img src="images/icons/youtube.png" alt=""></li>
         </div>
       </div>
 
